<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/primary">

    <LinearLayout
        android:id="@+id/rel_"
        android:layout_width="@dimen/field_size"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="2dp"
        android:orientation="vertical"
        android:padding="8dp"
        tools:ignore="TextSizeCheck">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/note_delete"
            android:textColor="#F8918C"
            android:textSize="14sp"
            tools:ignore="VisualLintLongText" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/edt_bg"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/lock_icon"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:adjustViewBounds="true"
                android:background="@android:color/transparent"
                android:contentDescription="@string/app_name"
                android:padding="7dp"
                android:scaleType="fitCenter"
                android:src="@drawable/lock2" />

            <EditText
                android:id="@+id/pswd_"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="4dp"
                android:background="@android:color/transparent"
                android:ems="10"
                android:gravity="start|center_vertical"
                android:hint="@string/pswd"
                android:inputType="numberPassword"
                android:lines="1"
                android:maxLength="10"
                android:singleLine="true"
                android:textColor="#FFFFFF"
                android:textColorHint="#64B5F6"
                android:textSize="15sp"
                tools:ignore="Autofill" />
        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            style="@style/buttonStyle"
            app:cornerRadius="15dp"
            android:id="@+id/dlt_btn"
            android:layout_width="220dp"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:padding="5dp"
            android:text="@string/dlt"
            android:textAllCaps="false"
            android:textColor="#ffffffff"
            android:textSize="15sp"
            tools:ignore="TextContrastCheck" />
    </LinearLayout>

</RelativeLayout>