<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary" >

    <LinearLayout
        android:id="@+id/rel_"
        android:layout_width="@dimen/field_size"
        android:layout_height="match_parent"
        android:layout_below="@id/rel2"
        android:layout_marginTop="2dp"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="8dp"
        tools:ignore="NotSibling,TextSizeCheck">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/note_change_sk"
            android:textColor="#81C784"
            android:textSize="14sp"
            tools:ignore="VisualLintLongText" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/edt_bg">

            <ImageView
                android:id="@+id/key_icon"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_centerVertical="true"
                android:adjustViewBounds="true"
                android:background="@android:color/transparent"
                android:contentDescription="@string/app_name"
                android:padding="7dp"
                android:scaleType="fitCenter"
                android:src="@drawable/key2" />

            <EditText
                android:id="@+id/new_sk"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerVertical="true"
                android:layout_margin="4dp"
                android:layout_toStartOf="@id/scan_button"
                android:layout_toEndOf="@id/key_icon"
                android:background="@android:color/transparent"
                android:ems="10"
                android:gravity="start|center_vertical"
                android:hint="@string/new_sk"
                android:inputType="textVisiblePassword"
                android:lines="1"
                android:singleLine="true"
                android:textColor="#ffffffff"
                android:textColorHint="#64B5F6"
                android:textSize="15sp"
                tools:ignore="Autofill" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/edt_bg"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/lock_icon"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:adjustViewBounds="true"
                android:background="@android:color/transparent"
                android:contentDescription="@string/app_name"
                android:padding="7dp"
                android:scaleType="fitCenter"
                android:src="@drawable/lock2" />

            <EditText
                android:id="@+id/pswd"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="4dp"
                android:background="@android:color/transparent"
                android:ems="10"
                android:gravity="start|center_vertical"
                android:hint="@string/pswd"
                android:inputType="numberPassword"
                android:lines="1"
                android:maxLength="10"
                android:singleLine="true"
                android:textColor="#ffffffff"
                android:textColorHint="#64B5F6"
                android:textSize="15sp"
                tools:ignore="Autofill" />
        </LinearLayout>

        <Button
            android:id="@+id/update_sk"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:padding="5dp"
            android:text="@string/change"
            android:textAllCaps="false"
            android:textColor="#ffffffff"
            android:textSize="15sp"
            tools:ignore="TextContrastCheck" />
    </LinearLayout>

</RelativeLayout>