<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_height="match_parent"
     android:layout_width="match_parent"
     android:background="@color/primary"
     android:theme="@style/AppTheme">

    <LinearLayout
         android:layout_height="match_parent"
         android:layout_width="@dimen/field_size"
         android:orientation="vertical"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="2dp"
         tools:ignore="NotSibling,TextSizeCheck"
         android:id="@+id/rel_">

        <TextView
             android:layout_height="wrap_content"
             android:layout_width="match_parent"
             android:padding="8dp"
             android:textSize="15sp"
             android:textColor="#DDE0E0"
             tools:ignore="VisualLintLongText"
             android:text="@string/note_msg" />

        <RelativeLayout
             android:layout_height="56dp"
             android:layout_width="match_parent"
             android:background="@drawable/edt_bg"
             android:layout_marginTop="10dp">

            <EditText
                 android:layout_height="match_parent"
                 android:layout_width="match_parent"
                 android:layout_centerInParent="true"
                 android:layout_toStartOf="@id/scan_button"
                 android:paddingRight="10dp"
                 android:textSize="15sp"
                 android:singleLine="true"
                 android:textColor="#FDFDFD"
                 android:ems="10"
                 tools:ignore="Autofill"
                 android:layout_toEndOf="@id/key_icon"
                 android:background="@android:color/transparent"
                 android:gravity="start|center_vertical"
                 android:hint="@string/subject"
                 android:textColorHint="#64B5F6"
                 android:lines="1"
                 android:paddingLeft="10dp"
                 android:inputType="textEmailSubject"
                 android:id="@+id/subject" />

        </RelativeLayout>

        <LinearLayout
             android:minHeight="150dp"
             android:maxHeight="250dp"
             android:layout_height="wrap_content"
             android:layout_width="match_parent"
             android:background="@drawable/edt_bg"
             android:gravity="center_vertical"
             android:orientation="horizontal"
             android:layout_marginTop="10dp"
             android:layout_gravity="center_horizontal">

            <EditText
                 android:layout_height="match_parent"
                 android:layout_width="match_parent"
                 android:paddingRight="10dp"
                 android:textSize="15sp"
                 android:textColor="#FDFDFD"
                 android:ems="10"
                 android:maxLength="1000"
                 tools:ignore="Autofill,VisualLintBounds"
                 android:background="@android:color/transparent"
                 android:gravity="start"
                 android:hint="@string/message_here"
                 android:textColorHint="#64B5F6"
                 android:paddingLeft="10dp"
                 android:inputType="textMultiLine"
                 android:id="@+id/message" />

        </LinearLayout>

        <com.google.android.material.button.MaterialButton
             android:layout_height="55dp"
             android:layout_width="220dp"
             android:padding="5dp"
             android:textSize="15sp"
             android:textColor="#FDFDFD"
             android:layout_marginTop="10dp"
             tools:ignore="TextContrastCheck"
             android:layout_gravity="center_horizontal"
             app:cornerRadius="15dp"
             android:textAllCaps="false"
             style="@style/buttonStyle"
             android:id="@+id/sendmsg"
             android:text="@string/send_msg" />

    </LinearLayout>

</RelativeLayout>