<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_height="match_parent"
     android:layout_width="match_parent"
     android:background="@color/primary"
     android:theme="@style/AppTheme">

    <LinearLayout
         android:layout_height="match_parent"
         android:layout_width="@dimen/field_size"
         android:layout_below="@id/rel2"
         android:gravity="center_horizontal"
         android:orientation="vertical"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="2dp"
         tools:ignore="NotSibling,TextSizeCheck"
         android:id="@+id/rel_">

        <TextView
             android:layout_height="wrap_content"
             android:layout_width="match_parent"
             android:padding="8dp"
             android:textSize="15sp"
             android:textColor="#DDE0E0"
             tools:ignore="VisualLintLongText"
             android:text="@string/note_change_pswd" />

        <RelativeLayout
             android:layout_height="56dp"
             android:layout_width="match_parent"
             android:background="@drawable/edt_bg"
             android:layout_marginTop="10dp">

            <ImageView
                 android:layout_height="40dp"
                 android:layout_width="40dp"
                 android:adjustViewBounds="true"
                 android:contentDescription="@string/app_name"
                 android:scaleType="fitCenter"
                 android:src="@drawable/lock2"
                 android:background="@android:color/transparent"
                 android:layout_centerVertical="true"
                 android:padding="7dp"
                 tools:ignore="DuplicateIds"
                 android:id="@+id/lock_icon1" />

            <EditText
                 android:layout_height="match_parent"
                 android:layout_width="match_parent"
                 android:layout_centerInParent="true"
                 android:paddingRight="10dp"
                 android:textSize="15sp"
                 android:singleLine="true"
                 android:textColor="#FDFDFD"
                 android:ems="10"
                 tools:ignore="Autofill"
                 android:layout_toEndOf="@id/lock_icon1"
                 android:background="@android:color/transparent"
                 android:gravity="start|center_vertical"
                 android:hint="@string/cur_pswd"
                 android:textColorHint="#64B5F6"
                 android:lines="1"
                 android:paddingLeft="10dp"
                 android:maxLength="10"
                 android:inputType="numberPassword"
                 android:id="@+id/current_pswd" />

        </RelativeLayout>

        <LinearLayout
             android:layout_height="56dp"
             android:layout_width="match_parent"
             android:background="@drawable/edt_bg"
             android:gravity="center"
             android:orientation="horizontal"
             android:layout_marginTop="10dp">

            <ImageView
                 android:layout_height="40dp"
                 android:layout_width="40dp"
                 android:adjustViewBounds="true"
                 android:contentDescription="@string/app_name"
                 android:scaleType="fitCenter"
                 android:src="@drawable/lock2"
                 android:background="@android:color/transparent"
                 android:padding="7dp"
                 tools:ignore="DuplicateIds"
                 android:id="@+id/lock_icon2" />

            <EditText
                 android:layout_height="match_parent"
                 android:layout_width="match_parent"
                 android:paddingRight="10dp"
                 android:textSize="15sp"
                 android:singleLine="true"
                 android:textColor="#FDFDFD"
                 android:ems="10"
                 tools:ignore="Autofill"
                 android:background="@android:color/transparent"
                 android:gravity="start|center_vertical"
                 android:hint="@string/new_pswd"
                 android:textColorHint="#64B5F6"
                 android:lines="1"
                 android:paddingLeft="10dp"
                 android:maxLength="10"
                 android:inputType="numberPassword"
                 android:id="@+id/new_pswd1" />

        </LinearLayout>

        <RelativeLayout
             android:layout_height="56dp"
             android:layout_width="match_parent"
             android:background="@drawable/edt_bg"
             android:layout_marginTop="10dp">

            <ImageView
                 android:layout_height="40dp"
                 android:layout_width="40dp"
                 android:adjustViewBounds="true"
                 android:contentDescription="@string/app_name"
                 android:scaleType="fitCenter"
                 android:src="@drawable/lock2"
                 android:background="@android:color/transparent"
                 android:layout_centerVertical="true"
                 android:padding="7dp"
                 android:id="@+id/lock_icon" />

            <EditText
                 android:layout_height="match_parent"
                 android:layout_width="match_parent"
                 android:layout_toStartOf="@id/scan_button"
                 android:paddingRight="10dp"
                 android:layout_centerVertical="true"
                 android:textSize="15sp"
                 android:singleLine="true"
                 android:textColor="#FDFDFD"
                 android:ems="10"
                 tools:ignore="Autofill"
                 android:layout_toEndOf="@id/lock_icon"
                 android:background="@android:color/transparent"
                 android:gravity="start|center_vertical"
                 android:hint="@string/confirm_new_pswd"
                 android:textColorHint="#64B5F6"
                 android:lines="1"
                 android:paddingLeft="10dp"
                 android:maxLength="10"
                 android:inputType="numberPassword"
                 android:id="@+id/new_pswd2" />

        </RelativeLayout>

        <com.google.android.material.button.MaterialButton
             android:layout_height="55dp"
             android:layout_width="220dp"
             android:padding="5dp"
             android:textSize="15sp"
             android:textColor="#FDFDFD"
             android:layout_marginTop="10dp"
             tools:ignore="TextContrastCheck"
             android:layout_gravity="center_horizontal"
             app:cornerRadius="15dp"
             android:textAllCaps="false"
             style="@style/buttonStyle"
             android:id="@+id/update_pswd"
             android:text="@string/change" />

    </LinearLayout>

</RelativeLayout>